Workspace copy wizard overlapping header bug fixed

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/dialog.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/dialog.scss
@@ -257,8 +257,18 @@
   }
 }
 
+.dialog__window--copy-workspace {
+  height: 100%;
+
+  .multi-step {
+    inset: 0;
+    bottom: 20px
+  }
+}
+
 .dialog__window--note-information {
   max-height: 100%;
+
 
   .dialog__content {
     padding: 20px 15px 20px 20px;
